# Python-Script-Languages

./: .gitignore  README.md
Lab_1/: triangle.py
Lab_1/wiki_dependency/: pyproject.toml
Lab_1/wiki_dependency/wiki_dependency/: program.py
Lab_10/Code/: Models.py  app.py  create_database.py  interface.py  load_data.py  load_data_2021.py  utils.py
Lab_2/: Utils.py  lab_2.py  lab_3_a_a.py  lab_3_a_b.py  lab_3_a_c.py  lab_3_b.py  lab_3_c.py  lab_3_d.py  lab_3_e.py  lab_3_f.py  lab_3_g.py  lab_3_h.py  lab_test_links.py
Lab_3/: lab_2_b.py  lab_2_d.py  lab_2_e.py  lab_2_g.py  lab_3_b.py
Lab_4/: backup.py  lab_1_a.py  lab_2.py  lab_3.py  restore.py
Lab_4/FileAnalyzer/: FileAnalyzer.cpp  FileAnalyzer.sln  FileAnalyzer.vcxproj  FileAnalyzer.vcxproj.filters
Lab_5/: lab_2_a.py  lab_5_1.py  lab_5_2.py  lab_5_3.py  lab_5_4.py  lab_5_5.py
Lab_7/src/: decorator_logging.py  functions.py  generator_closures.py  higher_order_functions.py  password_generator.py
Lab_7/tests/: test_decorator_logging.py  test_functions.py  test_generator_closures.py  test_higher_order_functions.py
Lab_8/: load_logs.py  logs_interface.py  test.py  utils.py
Lab_9/: Journal.py  LogEntries.py
Lab_9/src/: Factory.py  Journal.py  LogEntries.py  User.py  Utils.py  parse_log.py
Lab_9/tests/: test_Journal.py  test_SSH_log_ipv4s.py  test_SSH_log_timestamp.py
Project/: .env  Dockerfile  app.py  run.py
Project/Model/: database.py  models.py  test.py
Project/Styling/: main_page.css
lab_3/: Utils.py  lab_2_a.py  lab_2_c.py  lab_2_e.py  lab_2_f.py  lab_3_a.py  lab_3_c.py  lab_3_d.py
(+31 files in other folders)
